[project]
name = "blog-generation-with-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "langchain>=0.3.26",
    "langchain-cli[inmem]>=0.0.36",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.5",
    "langgraph>=0.5.2",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
